# pyecflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.py  demo_config.yaml  environment.yml  pyproject.toml  requirements.txt  sandbox.py  setup.cfg  test-environment.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pynorms.yaml  pytests.yaml
notebooks/: pyflow.ipynb
notebooks/scratch/files/testSuite/def/: testSuite.def
notebooks/scratch/files/testSuite/scripts/A/: Ab1.ecf  Ab2.ecf
notebooks/scratch/files/testSuite/scripts/A/Aa/: Aa1.ecf
notebooks/scratch/files/testSuite/scripts/B/: B1.ecf
notebooks/scratch/files/testSuite/scripts/B/Ba/: Ba1.ecf
pyecflow/: __init__.py  __init__copy.py  __init__copy2.py  __init__old.py  d  fam_test_config.yaml  generate_suite.py  pecf_test.py  pyecf_wf.py  workflow_anchor_family.py  workflow_anchorfamily.py  workflow_family.py  workflow_header.py  workflow_include.py  workflow_suite.py  workflow_task.py  workflow_task_copy.py
pyecflow/static/: envir-p1.h  head.h  tail.h
pyecflow/templates/: task.ecf.j2
scratch/: adv_att.py  adv_att2.py  adv_attr17.py  anchor_family.py  config_suite.py  family.py  flow_con.py  generate_suite.py  hello_pyflow.py  label.py  mars_delegation.py  mars_ex.py  mars_ex2.py  mars_inheritance.py  oos.py  oos2.py  oos3.py  pyecf_wf.py  script_gen.py  suite.py  task.py  time.py  var_inher.py  workflow_family.py
scratch/files/: t1.ecf  t2.ecf
tests/: README.md  test_ecflow.py  test_ecflow_preprocessing.py  test_generate_suite.py  test_package_data.py  test_workflow_anchorfamily.py  test_workflow_header.py  test_workflow_include.py  test_workflow_suite.py  test_workflow_task.py
tests/data/: duplicate_name_config.yaml  preprocessing_custom_headers_config.yaml  preprocessing_test_config.yaml  task_test_config.yaml
