[metadata]
name = pyecFlow
version = 0.0.1
description = An application to create ecFlow suite definition file and scripts
long_description = file: README.md
long_description_content_type = text/markdown
author = "aerorahul"
#author_email = first.last@domain.tld
keywords = ecflow, pyflow
home_page = https://github.com/aerorahul/pyecFlow
license = GNU Lesser General Public License
license_files = LICENSE.md
classifiers =
  Development Status :: 1 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU Lesser General Public License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: Libraries :: Python Modules
  Operating System :: OS Independent
  Typing :: Typed
project_urls =
  Bug Tracker = https://github.com/aerorahul/pyecFlow/issues
  CI = https://github.com/aerorahul/pyecFlow/actions

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
  setuptools
install_requires =
  numpy==1.21.6
  PyYAML==6.0
  Jinja2==3.1.2
  pyflow@git+https://github.com/ecmwf/pyflow@v3.1.0#egg=pyflow
tests_require =
  pytest

[options.packages.find]
include=pyecFlow*

[options.package_data]
* = *.txt, *.md

[options.extras_require]
dev = pytest>=7; pytest-cov>=3

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true